# streamlit_crie_12_aplicacoes_web_de_inteligencia_artificial

./: .gitignore  README.md  carros.py  pyproject.toml  requirements.txt
case1_franquias/: app_reglin.py
case3_previsao_producao_leite/: README.md  app.py
case4_prob_quebra_equipamentos/: README.md  equipamentos.py
case9_otimizacao_lucro_transporte_carga/: README.MD  otimizacarga.py  pyproject.toml
caso2_class_carros/: carros.py  classificador.py
