[tool.poetry]
name = "case9-otimizacao-lucro-transporte-carga"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
geneticalgorithm = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
